--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,64 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.21"
+
+    ext.versions = [
+            kotlin             : "1.4.21",
+            coroutines         : "1.3.3",
+            androidGradlePlugin: "4.0.1",
+            appCompat          : "1.3.1",
+            cardView           : "1.0.0",
+            recyclerView       : "1.2.1",
+            materialDesign     : "1.4.0",
+            lifecycle          : "2.2.0",
+            fragmentExtensions : "1.3.6",
+            constraintLayout   : "2.1.0",
+            coreKTX            : "1.6.0"
+    ]
+
+    ext.gradlePlugins = [
+            android: "com.android.tools.build:gradle:$versions.androidGradlePlugin",
+            kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+    ]
+
+    ext.libs = [
+            "android"               : [
+                    appCompat: "androidx.appcompat:appcompat:$versions.appCompat"
+            ],
+            "androidKTX"            : [
+                    coreKTX     : "androidx.core:core-ktx:$versions.coreKTX",
+                    liveDataKTX : "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle",
+                    viewModelKTX: "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle",
+                    fragmentKTX : "androidx.fragment:fragment-ktx:$versions.fragmentExtensions"
+            ],
+            "kotlin"                : [
+                    kotlinStdLib     : "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
+                    coroutinesCore   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines",
+                    coroutinesAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
+            ],
+
+            "ui"                    : [
+                    material        : "com.google.android.material:material:$versions.materialDesign",
+                    recyclerView    : "androidx.recyclerview:recyclerview:$versions.recyclerView",
+                    cardView        : "androidx.cardview:cardview:$versions.cardView",
+                    constraintLayout: "androidx.constraintlayout:constraintlayout:$versions.constraintLayout"
+
+            ],
+            "architectureComponents": [
+                    lifecycleExtensions: "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle",
+                    //  lifecycleRuntime : "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle",
+            ]
+    ]
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:${versions.androidGradlePlugin}"
+        classpath gradlePlugins.kotlin
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
+
+
 }
 
 allprojects {
