--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlinx-serialization'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -14,6 +15,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "long", "CONNECT_TIMEOUT", 30000 + "L"
+        buildConfigField "long", "READ_TIMEOUT", 10000 + "L"
+        buildConfigField "long", "WRITE_TIMEOUT", 10000 + "L"
+        buildConfigField "String", "BASE_URL", "\"https://api.weather.yandex.ru\""
+        buildConfigField "String", "API_KEY", "\"355d8395-f6eb-4cdc-9423-fd79695a8734\""
     }
 
     buildTypes {
@@ -21,6 +28,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -32,15 +48,17 @@ dependencies {
     implementation libs.ui.cardView
     implementation libs.ui.recyclerView
     implementation libs.ui.material
+    implementation libs.network.retrofit
+    implementation libs.di.dagger
+    implementation libs.di.daggerAndroid
+    implementation libs.network.kotlinSerialization
+    kapt libs.di.daggerCompiler
 
     // Android KTX
     implementation libs.androidKTX.fragmentKTX
     implementation libs.androidKTX.coreKTX
 
-
-
-
-
-
+    // JSON Converter
+    implementation libs.network.jsonConverter
 
 }
