--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
 
     ext.versions = [
-            kotlin             : "1.4.21",
+            kotlin             : "1.4.30",
             coroutines         : "1.3.3",
             androidGradlePlugin: "4.0.1",
             appCompat          : "1.3.1",
@@ -12,12 +12,17 @@ buildscript {
             lifecycle          : "2.2.0",
             fragmentExtensions : "1.3.6",
             constraintLayout   : "2.1.0",
-            coreKTX            : "1.6.0"
+            coreKTX            : "1.6.0",
+            dagger             : "2.38.1",
+            retrofit           : "2.9.0",
+            kotlinSerialization: "1.2.2",
+            kotlinConverter    : "0.8.0"
     ]
 
     ext.gradlePlugins = [
-            android: "com.android.tools.build:gradle:$versions.androidGradlePlugin",
-            kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+            android            : "com.android.tools.build:gradle:$versions.androidGradlePlugin",
+            kotlin             : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
+            kotlinSerialization: "org.jetbrains.kotlin:kotlin-serialization:$versions.kotlin"
     ]
 
     ext.libs = [
@@ -45,17 +50,32 @@ buildscript {
             ],
             "architectureComponents": [
                     lifecycleExtensions: "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle",
-                    //  lifecycleRuntime : "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle",
+                    lifecycleRuntime   : "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle",
+            ],
+            network                 : [
+                    retrofit           : "com.squareup.retrofit2:retrofit:$versions.retrofit",
+                    kotlinSerialization: "org.jetbrains.kotlinx:kotlinx-serialization-json:$versions.kotlinSerialization",
+                    jsonConverter : "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:$versions.kotlinConverter"
+            ],
+            di                      : [
+                    dagger        : "com.google.dagger:dagger:$versions.dagger",
+                    daggerAndroid : "com.google.dagger:dagger-android:$versions.dagger",
+                    daggerCompiler: "com.google.dagger:dagger-compiler:$versions.dagger"
+            ],
+
+            "utils"                 : [
+
             ]
+
     ]
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${versions.androidGradlePlugin}"
+        classpath gradlePlugins.android
         classpath gradlePlugins.kotlin
-
+        classpath gradlePlugins.kotlinSerialization
     }
 
 
