--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
+    ext {
+        kotlin_version = '1.4.21'
+    }
     ext.versions = [
             kotlin             : "1.4.30",
             coroutines         : "1.3.3",
@@ -52,12 +55,12 @@ buildscript {
                     lifecycleExtensions: "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle",
                     lifecycleRuntime   : "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle",
             ],
-            network                 : [
+            "network"                 : [
                     retrofit           : "com.squareup.retrofit2:retrofit:$versions.retrofit",
                     kotlinSerialization: "org.jetbrains.kotlinx:kotlinx-serialization-json:$versions.kotlinSerialization",
                     jsonConverter : "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:$versions.kotlinConverter"
             ],
-            di                      : [
+            "di"                     : [
                     dagger        : "com.google.dagger:dagger:$versions.dagger",
                     daggerAndroid : "com.google.dagger:dagger-android:$versions.dagger",
                     daggerCompiler: "com.google.dagger:dagger-compiler:$versions.dagger"
