--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,11 @@ dependencies {
     // JSON Converter
     implementation libs.network.jsonConverter
     implementation "com.google.dagger:dagger-android-support:$versions.dagger"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation("io.coil-kt:coil:1.3.2")
+    implementation("io.coil-kt:coil-svg:1.3.2")
+
 
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger"
 
